gobmkida/c3/is_illegal_ko_capture
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_illegal_ko_capture/src/engine/board.c:1621:37: error: use of undeclared identifier 'byte_9C689F'
if ( 3 - color != ( unsigned __int8)byte_9C689F[pos] ) 
                                    ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_illegal_ko_capture/src/obj/1/board.o] Error 1
